samples/_failures_safe/1761724485_b4f094_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_23e09436.c: In function ‘main’:
./samples/SAFE/__tmp_23e09436.c:153:9: error: expected expression at end of input
  153 |         if (choice == 1 ||
      |         ^~
./samples/SAFE/__tmp_23e09436.c:153:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_23e09436.c:153:9: error: expected declaration or statement at end of input
